k8s/myst/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myst
  namespace: myst
spec:
  ports:
    - name: http-port
      port: 80
      targetPort: http-port
      protocol: TCP
  selector:
    app: myst
