k8s/myst/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myst
  namespace: myst
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/server-snippet: |
      location "/metrics" {
          deny all;
          return 403;
        }
    nginx.ingress.kubernetes.io/limit-rps: "50"
    nginx.ingress.kubernetes.io/limit-rpm: "200"
    nginx.ingress.kubernetes.io/limit-burst-multiplier: "2"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecRuleRemoveById 911100
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - myst.bunetz.dev
    secretName: myst-tls
  rules:
  - host: myst.bunetz.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myst
            port:
              name: http-port
